# pinget

./: .gitignore  AGENTS.md  README.md
.agents/skills/: .gitkeep
.github/: CODEOWNERS
.github/workflows/: ci.yml  cli-packages.yml  parity-test.yml  release-crates.yml  release.yml  windows-smoke-tests.yml
dotnet/: .editorconfig  Devolutions.Pinget.slnx  Directory.Build.props
dotnet/src/Devolutions.Pinget.Cli/: CommonOptions.cs  Consts.cs  Devolutions.Pinget.Cli.csproj  Enums.cs  Program.cs  QueryArguments.cs  README.md
dotnet/src/Devolutions.Pinget.Cli/Extensions/: CommandExtensions.cs  ExceptionExtensions.cs  OptionExtensions.cs  StringExtensions.cs
dotnet/src/Devolutions.Pinget.Cli/Helpers/: InstalledPackageChecker.cs  Json.cs  Output.cs  Pin.cs  PinQuery.cs  PinTarget.cs  Print.cs  RequestCreator.cs  Source.cs  Text.cs
dotnet/src/Devolutions.Pinget.ComInterop.Net48/: Devolutions.Pinget.ComInterop.Net48.csproj  HResult.cs  IPackageManagerNative.cs  NativeMethods.cs  NativePingetComLibrary.cs  PingetPackageManager.cs
dotnet/src/Devolutions.Pinget.Core/: Devolutions.Pinget.Core.csproj  InstalledPackages.cs  InstallerDispatch.cs  Models.cs  NameNormalization.cs  PinStore.cs  PreIndexedSource.cs  Repository.cs  RestSource.cs  SettingsStore.cs  SourceStore.cs  SystemWingetSourceStore.cs
dotnet/src/Devolutions.Pinget.Core.Tests/: CoreTests.cs  Devolutions.Pinget.Core.Tests.csproj
dotnet/src/Devolutions.Pinget.PowerShell.Cmdlets/: Devolutions.Pinget.PowerShell.Cmdlets.csproj  PingetCmdletLayout.cs
dotnet/src/Devolutions.Pinget.PowerShell.Cmdlets/Cmdlets/: AddSourceCmdlet.cs  AssertPackageManagerCmdlet.cs  DisableSettingCmdlet.cs  EnableSettingCmdlet.cs  ExportPackageCmdlet.cs  FindPackageCmdlet.cs  GetPackageCmdlet.cs  GetSettingCmdlet.cs  GetSourceCmdlet.cs  GetUserSettingCmdlet.cs  GetVersionCmdlet.cs  InstallPackageCmdlet.cs  RemoveSourceCmdlet.cs  RepairPackageCmdlet.cs  RepairPackageManagerCmdlet.cs  ResetSourceCmdlet.cs  SetUserSettingCmdlet.cs  TestUserSettingCmdlet.cs  UninstallPackageCmdlet.cs  UpdatePackageCmdlet.cs
dotnet/src/Devolutions.Pinget.PowerShell.Cmdlets/Common/: Constants.cs  FinderCmdlet.cs  FinderExtendedCmdlet.cs  HashtableConverter.cs  InstallCmdlet.cs  InstallerSelectionCmdlet.cs  PackageCmdlet.cs  PingetPackageManagerCmdlet.cs
dotnet/src/Devolutions.Pinget.PowerShell.Cmdlets/ModuleFiles/: Devolutions.Pinget.Client.psd1  Devolutions.Pinget.Client.psm1  Format.ps1xml  Pinget.psd1
dotnet/src/Devolutions.Pinget.PowerShell.Engine/: CommandResults.cs  Devolutions.Pinget.PowerShell.Engine.csproj  Net48CompilerSupport.cs  PingetClient.Net48.cs  PingetClient.cs  PingetPowerShellEngineMarker.cs  PowerShellEngineVersion.cs
dotnet/tests/: Pinget.PowerShell.Tests.ps1  RunTests.ps1
nuget/Devolutions.Pinget.Cli.DotNet/: Devolutions.Pinget.Cli.DotNet.csproj  Devolutions.Pinget.Cli.DotNet.targets
nuget/Devolutions.Pinget.Cli.Rust/: Devolutions.Pinget.Cli.Rust.csproj  Devolutions.Pinget.Cli.Rust.targets
rust/: Cargo.toml  release-plz.toml  rustfmt.toml
rust/crates/pinget-cli/: Cargo.toml  build.rs
rust/crates/pinget-cli/src/: main.rs
rust/crates/pinget-com/: Cargo.toml
rust/crates/pinget-com/src/: lib.rs
rust/crates/pinget-core/: CHANGELOG.md  Cargo.toml  README.md
rust/crates/pinget-core/src/: lib.rs  name_normalization.rs
rust/crates/pinget-core/tests/fixtures/: ManifestV1_28-Singleton.yaml
rust/tools/: Compare-WingetParity.ps1  Smoke-Compare-WingetParity.ps1
scripts/: Build-CliNativeNuGetPackages.ps1  Build-PowerShellModule.ps1  Compare-WingetParity.ps1  Parity-Compare-WingetParity.ps1  Set-PingetVersion.ps1  Test-UpgradeParity.ps1
(+20 files in other folders)
