[package]
name = "pinget-com"
version = "0.2.0"
edition = "2024"
description = "Windows-only native COM bridge for Pinget backed by pinget-core."
license = "MIT"

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
anyhow = "1.0.102"
pinget-core = { path = "../pinget-core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
] }
