[package]
name = "pinget-core"
version = "0.4.2"
edition = "2024"
description = "Pure Rust Pinget core library that works directly with source caches, REST endpoints, and installed package state without COM."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Devolutions/pinget"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
dirs = "6.0.0"
flate2 = "1.1.9"
# fancy-regex (not the `regex` crate) because winget's NameNormalization
# patterns rely on lookbehind / lookahead — RE2's algorithm doesn't support
# those, but fancy-regex's backtracking engine does. Performance is fine for
# the one-shot normalize call per installed package.
fancy-regex = "0.16"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "query", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.11.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
zip = "8.5.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Security", "Win32_Security_Authorization", "Win32_Storage_Packaging_Appx", "Win32_System_Threading"] }
